--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,8 @@ authors = ["Yusuf Kaka <yusufk@gmail.com>"]
 [tool.poetry.dependencies]
 python = "^3.10"
 openai = "^0.26.1"
+python-telegram-bot = "^20.0"
+python-dotenv = "^0.21.1"
 
 [tool.poetry.dev-dependencies]
 
