--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ openai = "^0.26.1"
 python-telegram-bot = {extras = ["webhooks"], version = "^20.0"}
 python-dotenv = "^0.21.1"
 langchain = "^0.0.152"
+tiktoken = "^0.3.3"
 
 [tool.poetry.dev-dependencies]
 
