modified prompt context

--- a/.env.example
+++ b/.env.example
@@ -7,7 +7,10 @@ RUN_POLL=True
 TEMPERATURE=1
 MAX_TOKENS=1024
 ENGINE=davinci3_deployment_model
+EMBEDDING_ENGINE=embedding-deployment-model
 TOP_PROB=0.9
 OPENAI_API_TYPE=azure
 OPENAI_API_VERSION=2022-12-01
 OPENAI_API_BASE=https://my.openai.azure.com/
+PINECONE_API_KEY=3rdfsfsdf32r323f332f
+PINECONE_ENV=asia-southeast2-gcp
