--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,9 +6,10 @@ authors = ["Yusuf Kaka <yusufk@gmail.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.10"
-openai = "^0.26.1"
+openai = "0.27.8"
 python-telegram-bot = {extras = ["webhooks"], version = "^20.0"}
-python-dotenv = "^0.21.1"
+python-dotenv = "1.0.0"
+semantic-kernel = "^0.3.4-alpha.0"
 
 [tool.poetry.dev-dependencies]
 
