Try not to nuke existing env

--- a/.github/workflows/deploy-image-ghcr.yml
+++ b/.github/workflows/deploy-image-ghcr.yml
@@ -69,7 +69,13 @@ jobs:
       - name: Get current time
         id: time
         run: echo "timestamp=$(date +%s)" >> $GITHUB_OUTPUT
-  
+
+      - name: Get existing environment variables
+        id: current-env
+        run: |
+          ENV_VARS=$(az containerapp show -n jarvis-azure -g jarvis-rg --query "properties.template.containers[0].env" -o json)
+          echo "current_env=$ENV_VARS" >> $GITHUB_OUTPUT
+
       - name: Create new revision in Azure Container Apps
         uses: azure/container-apps-deploy-action@v1
         with:
@@ -78,5 +84,7 @@ jobs:
           imageToDeploy: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:main
           # Force new revision with environment variable
           environmentVariables: |
+            environmentVariables: |
+            ${{ fromJson(steps.current-env.outputs.current_env) }}
             REVISION_TIMESTAMP=${{ steps.time.outputs.timestamp }}
       
