--- a/.github/workflows/deploy-image-ghcr.yml
+++ b/.github/workflows/deploy-image-ghcr.yml
@@ -73,10 +73,11 @@ jobs:
       - name: Get existing environment variables
         id: current-env
         run: |
-          # Get existing vars and update REVISION_TIMESTAMP
-          ENV_VARS=$(az containerapp show -n jarvis-azure -g jarvis-rg --query "properties.template.containers[0].env" -o json)
-          UPDATED_VARS=$(echo "$ENV_VARS" | jq --arg ts "${{ steps.time.outputs.timestamp }}" '[.[] | if .name == "REVISION_TIMESTAMP" then .value = $ts else . end]' | jq -r '.[] | .name + "=" + .value' | tr '\n' ' ')
-          echo "current_env=$UPDATED_VARS" >> $GITHUB_OUTPUT
+          # Get current env vars excluding REVISION_TIMESTAMP
+          ENV_VARS=$(az containerapp show -n jarvis-azure -g jarvis-rg --query "properties.template.containers[0].env[?name!='REVISION_TIMESTAMP']" -o json)
+          # Add new REVISION_TIMESTAMP
+          FINAL_VARS=$(echo "$ENV_VARS" | jq -c '. + [{"name": "REVISION_TIMESTAMP", "value": "${{ steps.time.outputs.timestamp }}"}]' | jq -r '.[] | .name + "=" + .value' | tr '\n' ' ')
+          echo "current_env=$FINAL_VARS" >> $GITHUB_OUTPUT
 
       - name: Create new revision in Azure Container Apps
         uses: azure/container-apps-deploy-action@v1
