Refactor environment variable retrieval to update REVISION_TIMESTAMP while preserving existing variables

--- a/.github/workflows/deploy-image-ghcr.yml
+++ b/.github/workflows/deploy-image-ghcr.yml
@@ -73,23 +73,9 @@ jobs:
       - name: Get existing environment variables
         id: current-env
         run: |
-          # Get current configuration
+          # Get existing vars and update REVISION_TIMESTAMP
           ENV_VARS=$(az containerapp show -n jarvis-azure -g jarvis-rg --query "properties.template.containers[0].env" -o json)
-          
-          # Update or add REVISION_TIMESTAMP while preserving secretRefs
-          UPDATED_VARS=$(echo "$ENV_VARS" | jq --arg ts "${{ steps.time.outputs.timestamp }}" '
-            map(
-              if .name == "REVISION_TIMESTAMP" then
-                {"name": "REVISION_TIMESTAMP", "value": $ts}
-              elif has("secretRef") then
-                {"name": .name, "secretRef": .secretRef}
-              else
-                {"name": .name, "value": .value}
-              end
-            )'
-          )
-          
-          # Store the full JSON array
+          UPDATED_VARS=$(echo "$ENV_VARS" | jq --arg ts "${{ steps.time.outputs.timestamp }}" '[.[] | if .name == "REVISION_TIMESTAMP" then .value = $ts else . end]')
           echo "current_env=$UPDATED_VARS" >> $GITHUB_OUTPUT
 
       - name: Create new revision in Azure Container Apps
