--- a/.github/workflows/deploy-image-ghcr.yml
+++ b/.github/workflows/deploy-image-ghcr.yml
@@ -73,21 +73,11 @@ jobs:
       - name: Get existing environment variables
         id: current-env
         run: |
-          # Get existing vars
+          # Get existing vars and update REVISION_TIMESTAMP
           ENV_VARS=$(az containerapp show -n jarvis-azure -g jarvis-rg --query "properties.template.containers[0].env" -o json)
-          
-          # Update only REVISION_TIMESTAMP, escape JSON for GitHub Actions
-          UPDATED_VARS=$(echo "$ENV_VARS" | jq -c --arg ts "${{ steps.time.outputs.timestamp }}" '
-            map(
-              if .name == "REVISION_TIMESTAMP" then
-                {"name": "REVISION_TIMESTAMP", "value": $ts}
-              else
-                .
-              end
-            )')
-          
-          # Escape JSON string for GitHub Actions output
-          echo "current_env=${UPDATED_VARS}" >> $GITHUB_OUTPUT
+          UPDATED_VARS=$(echo "$ENV_VARS" | jq --arg ts "${{ steps.time.outputs.timestamp }}" '[.[] | if .name == "REVISION_TIMESTAMP" then .value = $ts else . end]')
+          FORMATED_VARS=$(echo "$UPDATED_VARS" | jq -r '.[] | if .value then .name + "=" + .value else .name + "=secretRef:" + .secretRef end' | tr '\n' ' ' && echo)
+          echo "current_env=$FORMATED_VARS" >> $GITHUB_OUTPUT
 
       - name: Create new revision in Azure Container Apps
         uses: azure/container-apps-deploy-action@v1
@@ -95,4 +85,4 @@ jobs:
           containerAppName: jarvis-azure
           resourceGroup: jarvis-rg
           imageToDeploy: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:main
-          environmentVariables: ${{ fromJson(steps.current-env.outputs.current_env) }}
+          environmentVariables: ${{ steps.current-env.outputs.current_env }}
