--- a/.github/workflows/deploy-image-ghcr.yml
+++ b/.github/workflows/deploy-image-ghcr.yml
@@ -76,7 +76,7 @@ jobs:
           # Get existing vars and update REVISION_TIMESTAMP
           ENV_VARS=$(az containerapp show -n jarvis-azure -g jarvis-rg --query "properties.template.containers[0].env" -o json)
           UPDATED_VARS=$(echo "$ENV_VARS" | jq --arg ts "${{ steps.time.outputs.timestamp }}" '[.[] | if .name == "REVISION_TIMESTAMP" then .value = $ts else . end]')
-          FORMATED_VARS=$(echo "$UPDATED_VARS" | jq -r '.[] | if .value then .name + "=" + .value else .name + "=secretRef:" + .secretRef end' | tr '\n' ' ' && echo)
+          FORMATED_VARS=$(echo "$UPDATED_VARS" | jq -r '.[] | if .value then .name + "=" + .value else .name + "=secretref:" + .secretRef end' | tr '\n' ' ' && echo)
           echo "current_env=$FORMATED_VARS" >> $GITHUB_OUTPUT
 
       - name: Create new revision in Azure Container Apps
