--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,45 @@
-aiohttp==3.8.2 ; python_version >= "3.10" and python_version < "4.0"
-aiosignal==1.3.1 ; python_version >= "3.10" and python_version < "4.0"
-anyio==4.0.0 ; python_version >= "3.10" and python_version < "4.0"
-async-timeout==4.0.3 ; python_version >= "3.10" and python_version < "4.0"
-attrs==23.1.0 ; python_version >= "3.10" and python_version < "4.0"
-certifi==2023.7.22 ; python_version >= "3.10" and python_version < "4.0"
-charset-normalizer==3.3.0 ; python_version >= "3.10" and python_version < "4.0"
-colorama==0.4.6 ; python_version >= "3.10" and python_version < "4.0" and platform_system == "Windows"
-exceptiongroup==1.1.3 ; python_version >= "3.10" and python_version < "3.11"
-frozenlist==1.3.1 ; python_version >= "3.10" and python_version < "4.0"
-h11==0.14.0 ; python_version >= "3.10" and python_version < "4.0"
-httpcore==0.18.0 ; python_version >= "3.10" and python_version < "4.0"
-httpx==0.25.0 ; python_version >= "3.10" and python_version < "4.0"
-idna==3.4 ; python_version >= "3.10" and python_version < "4.0"
-multidict==6.0.4 ; python_version >= "3.10" and python_version < "4.0"
-openai==0.28.1 ; python_version >= "3.10" and python_version < "4.0"
-python-dotenv==0.21.1 ; python_version >= "3.10" and python_version < "4.0"
-python-telegram-bot[webhooks]==20.6 ; python_version >= "3.10" and python_version < "4.0"
-requests==2.31.0 ; python_version >= "3.10" and python_version < "4.0"
-sniffio==1.3.0 ; python_version >= "3.10" and python_version < "4.0"
-tornado==6.3.3 ; python_version >= "3.10" and python_version < "4.0"
-tqdm==4.66.1 ; python_version >= "3.10" and python_version < "4.0"
-urllib3==2.0.6 ; python_version >= "3.10" and python_version < "4.0"
-yarl==1.8.1 ; python_version >= "3.10" and python_version < "4.0"
+aiohappyeyeballs==2.4.4
+aiohttp==3.11.11
+aiosignal==1.3.1
+annotated-types==0.7.0
+anyio==4.7.0
+attrs==23.2.0
+certifi==2024.12.14
+charset-normalizer==3.3.2
+contourpy==1.3.1
+cycler==0.12.1
+distro==1.9.0
+docutils==0.21.2
+fonttools==4.55.3
+frozenlist==1.4.1
+h11==0.14.0
+httpcore==1.0.7
+httpx==0.28.1
+idna==3.10
+jiter==0.8.2
+kiwisolver==1.4.8
+loguru==0.7.3
+matplotlib==3.10.0
+mistletoe==1.4.0
+multidict==6.0.5
+numpy==2.2.1
+openai==1.58.1
+packaging==24.2
+pillow==11.1.0
+propcache==0.2.1
+pydantic==2.10.4
+pydantic_core==2.27.2
+pyparsing==3.2.1
+pyTelegramBotAPI==4.25.0
+python-dateutil==2.9.0.post0
+python-dotenv==0.21.1
+python-telegram-bot==21.10
+requests==2.32.3
+six==1.17.0
+sniffio==1.3.1
+telegramify-markdown==0.3.2
+tornado==6.4.2
+tqdm==4.67.1
+typing_extensions==4.12.2
+urllib3==2.2.2
+yarl==1.18.3
