--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ python = "^3.10"
 openai = "^1.37.1"
 python-telegram-bot = {extras = ["webhooks","helpers"], version = "^21.3"}
 python-dotenv = "^0.21.1"
+telegramify-markdown = "^0.3.2"
 
 [tool.poetry.dev-dependencies]
 
