--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,8 @@ openai = "^1.37.1"
 python-telegram-bot = {extras = ["webhooks","helpers"], version = "^21.3"}
 python-dotenv = "^0.21.1"
 telegramify-markdown = "^0.3.2"
+autogen-agentchat = "^0.4.8.2"
+autogen-ext = {extras = ["azure", "openai", "web-search"], version = "^0.4.8.2"}
 
 [tool.poetry.dev-dependencies]
 
